--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <header>
     <h1>مرحبا بك في كونكت</h1>
     <p><span style="font-size: 20pt">يوجد تحديث جديد الان</span></p>
-        <p><span style="font-size: 20pt; font-weight: 700">اخر تحديدث بتاريخ : 04 / 08 / 2025  
+        <p><span style="font-size: 20pt; font-weight: 700">اخر تحديث بتاريخ : 04 / 08 / 2025  
 		</span>  </p>
     <p><span style="font-size: 20pt; font-weight: 700">برجاء الضغط على تحميل التحديث واستخدم التحديث الجديد بكود التفعيل الخاص بك</span></p>
 
@@ -115,6 +115,7 @@
 
 </body>
 </html>
+
 
 
 
