--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <header>
     <h1>مرحبا بك في كونكت</h1>
     <p><span style="font-size: 20pt">يوجد تحديث جديد الان</span></p>
-        <p><span style="font-size: 20pt; font-weight: 700">اخر تحديث بتاريخ : 04 / 08 / 2025  
+        <p><span style="font-size: 20pt; font-weight: 700">اخر تحديث بتاريخ : 06 / 08 / 2025  
 		</span>  </p>
     <p><span style="font-size: 20pt; font-weight: 700">برجاء الضغط على تحميل التحديث واستخدم التحديث الجديد بكود التفعيل الخاص بك</span></p>
 
@@ -109,12 +109,13 @@
   <script>
     function downloadNow() {
       alert("سيتم بدء التحميل الآن...");
-      window.location.href = "https://www.mediafire.com/file/4fgg697vcab7gno/%25D8%25A8%25D8%25B1%25D9%2586%25D8%25A7%25D9%2585%25D8%25AC_%25D9%2583%25D9%2588%25D9%2586%25D9%2583%25D8%25AA_%25D9%2586%25D8%25B3%25D8%25AE%25D9%2587_%25D9%2585%25D9%2581%25D8%25B9%25D9%2584%25D9%2587_%25D9%2585%25D8%25AF%25D9%2589_%25D8%25A7%25D9%2584%25D8%25AD%25D9%258A%25D8%25A7%25D9%2587.zip/file"; // غيّر هذا الرابط إلى رابط التحميل الحقيقي
+      window.location.href = "https://www.mediafire.com/file/o24j51fh69jnp1d/برنامج+كونكت+نسخه+مفعله+مدى+الحياه.zip/file"; // غيّر هذا الرابط إلى رابط التحميل الحقيقي
     }
   </script>
 
 </body>
 </html>
+
 
 
 
