--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <header>
     <h1>مرحبا بك في كونكت</h1>
-    <p><span style="font-size: 20pt">يوجد تحديث جديد الان</span></p>
+    <p><span style="font-size: 25pt">يوجد تحديث جديد الان</span></p>
         <p><span style="font-size: 20pt; font-weight: 700">اخر تحديث بتاريخ : 08 / 08 / 2025  
 		</span>  </p>
     <p><span style="font-size: 20pt; font-weight: 700">برجاء الضغط على تحميل التحديث واستخدم التحديث الجديد بكود التفعيل الخاص بك</span></p>
@@ -109,12 +109,13 @@
   <script>
     function downloadNow() {
       alert("سيتم بدء التحميل الآن...");
-      window.location.href = "https://www.mediafire.com/file/a4wbkxnqa4wgnvy/برنامج+كونكت+نسخه+مفعله+مدى+الحياه.rar/file"; // غيّر هذا الرابط إلى رابط التحميل الحقيقي
+      window.location.href = "https://www.mediafire.com/file/68dmstgd5dyqlkw/برنامج+كونكت+نسخه+مفعله+مدى+الحياه.zip/file"; // غيّر هذا الرابط إلى رابط التحميل الحقيقي
     }
   </script>
 
 </body>
 </html>
+
 
 
 
