--- a/index.html
+++ b/index.html
@@ -1,125 +1,20 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>كونكت - الصفحة الرئيسية</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Cairo', sans-serif;
-      background: linear-gradient(to bottom right, #0f2027, #203a43, #2c5364);
-      color: white;
-      text-align: center;
-    }
-
-    header {
-      padding: 50px 20px 20px;
-      background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
-      color: #00c4ff;
-    }
-
-    p {
-      font-size: 20px;
-      margin: 10px 0 30px;
-    }
-
-    .download-button {
-      padding: 15px 30px;
-      font-size: 20px;
-      background-color: #00c4ff;
-      color: #fff;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .download-button:hover {
-      background-color: #00a1d6;
-    }
-
-    .features {
-      margin-top: 40px;
-      padding: 0 20px;
-    }
-
-    .feature-box {
-      background-color: rgba(255, 255, 255, 0.1);
-      margin: 15px auto;
-      padding: 20px;
-      max-width: 600px;
-      border-radius: 12px;
-    }
-
-    footer {
-      margin-top: 50px;
-      padding: 20px;
-      background-color: rgba(255, 255, 255, 0.05);
-      font-size: 14px;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 32px;
-      }
-      .download-button {
-        font-size: 16px;
-        padding: 10px 20px;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>كونكت - كود التفعيل</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header>
-    <h1>مرحبا بك في كونكت</h1>
-    <p><span style="font-size: 25pt">يوجد تحديث جديد الان</span></p>
-        <p><span style="font-size: 20pt; font-weight: 700">اخر تحديث بتاريخ : 09 / 08 / 2025  
-		</span>  </p>
-    <p><span style="font-size: 20pt; font-weight: 700">برجاء الضغط على تحميل التحديث واستخدم التحديث الجديد بكود التفعيل الخاص بك</span></p>
-
-    <button class="download-button" onclick="downloadNow()">تحميل الآن</button>
-  </header>
-
-  <section class="features">
-    <div class="feature-box">
-      <h3>🖥️ إدارة الكروت بسهولة</h3>
-      <p>أنشئ، اطبع وتابع كروت الواي فاي من مكان واحد فقط.</p>
+    <div class="container">
+        <h1>مرحبًا بك في نظام كونكت</h1>
+        <p>هذا النظام مصمم خصيصًا لمساعدتك على طباعة كروت الهوتسبوت وكروت اليوزرمانجر باحترافية عالية وسهولة تامة.</p>
+        <input type="text" id="activationCode" placeholder="أدخل كود التفعيل هنا">
+        <button onclick="validateCode()">دخول</button>
+        <p id="errorMessage" class="error-message"></p>
+        <footer>© شريف كونكت - المنيا، العدوه</footer>
     </div>
-    <div class="feature-box">
-      <h3>📊 تقارير مفصلة</h3>
-      <p>تتبع نشاط المستخدمين وتحليل الأداء بدقة.</p>
-    </div>
-    <div class="feature-box">
-      <h3>🛡️ حماية متقدمة</h3>
-      <p>حماية قوية وربط مرخص بجهاز الكمبيوتر الخاص بك.</p>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 كونكت للدعاية والإعلان. جميع الحقوق محفوظة.
-  </footer>
-
-  <script>
-    function downloadNow() {
-      alert("سيتم بدء التحميل الآن...");
-      window.location.href = "https://www.mediafire.com/file/adk7rfc9cvnht80/برنامج+كونكت+نسخه+مفعله+مدى+الحياه+3.rar/file"; // غيّر هذا الرابط إلى رابط التحميل الحقيقي
-    }
-  </script>
-
+    <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
